<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kimayadesai.portal.DashboardActivity">


    <TextView
        android:id="@+id/redId"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/redId"
        android:background="#00000000"
        android:paddingRight="10dp"

        android:text="@string/reset_classes"

        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/registerCourseTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/resetButton"
                android:layout_alignParentStart="true"

                android:layout_marginStart="11dp"
                android:text="@string/RegisteredClass"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

    <ListView
        android:id="@+id/regCourseViewTxt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerCourseTxt"
        android:layout_marginTop="9dp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="160dp"
                android:layout_height="30dp"

                android:layout_below="@+id/regCourseViewTxt"
                android:layout_marginStart="20dp"
                android:background="@drawable/border"
                android:text="@string/RegisterClass" />

            <Button
                android:id="@+id/dropRegister"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:background="@drawable/border"
                android:layout_below="@+id/regCourseViewTxt"

                android:layout_marginEnd="16dp"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@+id/registerButton"
                android:text="@string/DropClass" />

    <TextView
        android:id="@+id/waitCourseTxt"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_below="@+id/registerButton"
        android:text="@string/Waitlist"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/waitCourseViewTxt"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:layout_below="@+id/waitCourseTxt"
        android:layout_marginTop="10dp" />


            <Button
                android:id="@+id/dropWaitlist"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/dropRegister"
                android:layout_below="@+id/waitCourseViewTxt"
                android:layout_marginEnd="72dp"
                android:background="@drawable/border"
                android:text="@string/WaitlistClass" />



    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/dropRegister"
        android:layout_below="@+id/registerCourseTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filterMyList" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/redId"
        android:paddingRight="10dp"

        android:layout_alignParentEnd="true"
        android:background="#00000000"
        android:text="sign Out"
        android:textColor="@color/colorPrimary" />


</RelativeLayout>



